--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>    
         <li><a href="recipes/pandulce.html">Pan Dulce</a></li>
         <li><a href="recipes/chilaquiles.html">Chilaquiles Verdes</a></li>
-        <li></li>
+        <li><a href="recipes/menudo.html">Menudo</a></li>
     </ul>
 </body>
 </html>
